# Taller_ABOO

./: Build_OptBinTree.cxx  Build_OptBinTree.h  CMakeLists.txt  LICENSE  OptBinNode.h  OptBinNode.hxx  OptBinTree.h  OptBinTree.hxx  Pruebas.cxx  README.md  a.sh  build_histogram.cxx  diccionario.txt  main.cxx  main3.cxx  opt_bin_trees.lyx  principito.txt
csv_files/: el_quijote_histogram.csv  principito_histograma.csv
include/: OptBinNode.h
src/: build_histogram.cxx  main.cxx
